--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -4,13 +4,12 @@
 
 {% block content %}
 
-<!-- Affichage des messages flash -->
 <!-- Afficher les messages flash -->
 {% with messages = get_flashed_messages(with_categories=True) %}
     {% if messages %}
     <div class="flash-messages-admin">
         {% for category, message in messages %}
-        <p class="{{ category }}">{{ message }}</p>
+        <p class="flash-message {{ category }}">{{ message }}</p>
         {% endfor %}
     </div>
     {% endif %}
