Prise en charge de la recherche à partir de la race

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,7 +41,7 @@
     <div class="mission-content">
         <h2>Notre Mission</h2>
         <p>
-            Chez <strong>Adoption d'Animaux</strong>, notre mission est de fournir un foyer aimant à chaque animal. 
+            Chez <span class="mission-bold">Adoption d'Animaux</span>, notre mission est de fournir un foyer aimant à chaque animal. 
             Nous croyons que chaque vie compte et nous nous efforçons de construire un pont entre les animaux sans abri 
             et les familles prêtes à les accueillir.
         </p>
