--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -59,12 +59,7 @@
     <script src="{{ url_for('static', filename='scripts/admin.js') }}"></script>
     <script src="{{ url_for('static', filename='scripts/form-handler.js') }}"></script>
     <script src="{{ url_for('static', filename='scripts/validation.js') }}"></script> 
-
-
-    <!-- <script src="{{ url_for('static', filename='scripts/data.js') }}"></script>
-    <script src="{{ url_for('static', filename='scripts/ui.js') }}"></script>
-    <script src="{{ url_for('static', filename='scripts/main.js') }}"></script>
-    -->
+    <script src="{{ url_for('static', filename='scripts/modal.js') }}"></script>
 
 </body>
 </html>
