--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Titre par défaut{% endblock %}</title>
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="{{url_for("static", filename='css/style.css')}} "> -->
     <link rel="stylesheet" href="{{url_for("static", filename='css/main.css')}} ">
 </head>
@@ -11,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <h1>Adoption d'Animaux</h1>
+            <a href="/" class="text-decoration-none"><h1>Adoption d'Animaux</h1></a>
             <div class="nav-links">
                 <a href="/" class="{% if request.endpoint == 'home' %}active{% endif %}">Accueil</a>
                 <a href="{{ url_for('animals_routes.list') }}" class="{% if request.endpoint == 'animals_routes.list' %}active{% endif %}">Liste des Animaux</a>
@@ -60,6 +62,6 @@
     <script src="{{ url_for('static', filename='scripts/form-handler.js') }}"></script>
     <script src="{{ url_for('static', filename='scripts/validation.js') }}"></script> 
     <script src="{{ url_for('static', filename='scripts/modal.js') }}"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
